# school_projects

./: .gitmodules  README.md
IndieStudio/: CMakeLists.txt  save.json
IndieStudio/game/includes/: indie.hpp
IndieStudio/game/includes/map/: Map.hpp  circle.hpp  rectangle.hpp  square.hpp  utils.hpp
IndieStudio/game/includes/save_load/: LoadManager.hpp  SaveManager.hpp
IndieStudio/game/includes/scene/: Credit.hpp  EndGame.hpp  LoadingScreen.hpp  Main.hpp  MainMenu.hpp  MenuSelect.hpp
IndieStudio/game/includes/script/: Bombe.hpp  BonusBomb.hpp  BonusRange.hpp  BonusSpeed.hpp  Cube.hpp  Fire.hpp  GameManager.hpp  Logo.hpp  MapGenerator.hpp  MenuManager.hpp  Mob.hpp  MyCamera.hpp  Option.hpp  PauseManager.hpp  Player.hpp  SelectionManager.hpp  SelectionPlayer.hpp
IndieStudio/game/sources/: Engine.cpp  Module.cpp  main.cpp
IndieStudio/game/sources/factories/: ScriptFact.cpp  SpriteFact.cpp
IndieStudio/game/sources/save_load/: LoadManager.cpp  SaveManager.cpp
IndieStudio/game/sources/scene/: Credit.cpp  EndGame.cpp  LoadingScreen.cpp  Main.cpp  MainMenu.cpp  MenuSelect.cpp
IndieStudio/game/sources/script/: Bombe.cpp  BonusBomb.cpp  BonusRange.cpp  BonusSpeed.cpp  Cube.cpp  Fire.cpp  GameManager.cpp  Logo.cpp  MapGenerator.cpp  MenuManager.cpp  Mob.cpp  MyCamera.cpp  Option.cpp  PauseMenu.cpp  Player.cpp  SelectionManager.cpp  SelectionPlayer.cpp
IndieStudio/lib/SW/: Components.hpp  Engine.hpp  Factory.hpp  Module.hpp  Resources.hpp  Scene.hpp  Utils.hpp
IndieStudio/lib/engine/: CMakeLists.txt
IndieStudio/lib/engine/sources/: Engine.cpp  Entity.cpp  Scene.cpp
IndieStudio/lib/json_parser/includes/: Array.hpp  Array.inl  Data.hpp  Data.inl  Object.hpp  Object.inl  Value.hpp  Value.inl  data_type.hpp
IndieStudio/raylib_module/includes/: Module.hpp
IndieStudio/raylib_module/includes/component/: Audio.hpp  BillBoard.hpp  Camera.hpp  Collider.hpp  Mesh.hpp  Movement.hpp  Music.hpp  Skybox.hpp  Sprite.hpp  Text.hpp  Transform.hpp  components.hpp
IndieStudio/raylib_module/includes/factory/: AudioFact.hpp  BillBoardFact.hpp  CameraFact.hpp  ColliderFact.hpp  IAColliderFact.hpp  MeshFact.hpp  MovementFact.hpp  MusicFact.hpp  PlayerColliderFact.hpp  RayIAColliderFact.hpp  SkyBoxFact.hpp  SpriteFact.hpp  TextFact.hpp  TransformFact.hpp  factories.hpp
IndieStudio/raylib_module/includes/resources/: Font.hpp  Model.hpp  Music.hpp  Sound.hpp  (+1 more)
IndieStudio/raylib_module/sources/: Module.cpp
IndieStudio/resources/: fonts.json  models.json  sounds.json  textures.json
IndieStudio/resources/models/: Bomb.mtl  BonusBomb.mtl  BonusRange.mtl  BonusSpeed.mtl  Cube.mtl  Fire.mtl  Ground.mtl  Perso.mtl  Perso_blue.mtl  Perso_green.mtl  Perso_orange.mtl  Perso_red.mtl  Unbreackable_block.mtl
IndieStudio/resources/save/: GameInfo.json  GameSetting.json
IndieStudio/resources/shaders/: cubeMap.fs  cubeMap.vs  skybox.fs  skybox.vs
(+485 files in other folders)
